:book: [feat]: Create Modal of TaskAdd

--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "immer": "^10.0.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.3.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
