--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
@@ -23,6 +24,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "recoil": "^0.7.7",
     "use-immer": "^0.9.0"
   },
