--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-checkbox": "~2.4.0",
     "expo-status-bar": "~1.6.0",
     "immer": "^10.0.3",
     "prop-types": "^15.8.1",
@@ -27,8 +27,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "recoil": "^0.7.7",
-    "use-immer": "^0.9.0",
-    "expo-checkbox": "~2.4.0"
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
